Check available memory before attempting large allocations.

BUG: 255858


svn path=/branches/extragear/graphics/digikam/core/; revision=1217348